oioioi/szkopul/static/common/szkopul.scss
@import "scss/utility";
@import "bootstrap/scss/grid";

.szkopul-dashboard__container {
  @extend .container-fluid;
  max-width: 1400px;
}

.dashboard-container {
  margin-top: 50px;
  margin-bottom: 60px;
  margin-left: -15px;
}

.dashboard-row {
  justify-content: center;
}

.dashboard-panel-head {
  text-align: center;
  background-color: #f5f5f5;
  border-style: solid solid none solid;
  border-width: 1px 1px 0 1px;
  border-color: #ddd;
  border-radius: 10px 10px 0 0;
  box-shadow: 0 1px 2px rgba(100, 100, 100, 0.4);
}

.dashboard-card-body {
  border-style: none solid solid solid;
  border-width: 0 1px 1px 1px;
  border-color: #ddd;
  border-radius: 0 0 10px 10px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
}

.dashboard-card-footer {
  border-top-style: solid;
  border-width: 1px;
  border-color: #ddd;
  padding-top: 1em;
  margin-bottom: 0;
}

.plain_link {
  color: #333333;
}

.plain_link:hover {
  color: #333333;
}

.content-row {
  display: flex;
  justify-content: center;
}

.szkopul-logo {
  margin-top: 4rem;
  margin-bottom: 7rem;
}

.welcome-msg {
  font-size: 18px
}

.break-all-words {
  word-break: break-all;
}

#szkopul-contact-form-open {
  position: fixed;
  right: 1em;
  bottom: 1em;
  z-index: 999;
}

#supporters {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

#jane-street-logo {
  margin-top: 1rem;
  margin-left: 1rem;
  margin-bottom: 3rem;
}

#projekt-map {
  width: 50%;
  height: auto;
}

@media screen and (max-width: 540px) {
  #supporters {
    flex-direction: column;
  }
  #projekt-map {
    width: 80%;
  }
}

@media screen and (min-width: 720px){
  #jane-street-logo {
    width: 20%;
  }
}

@media screen and (min-width: 540px) and (max-width: 720px) {
  #jane-street-logo {
    width: 30%;
  }
}

@media screen and (min-width: 360px) and (max-width: 540px){
  #jane-street-logo {
    width: 40%;
  }
}

@media screen and (max-width: 360px){
  #jane-street-logo {
    width: 50%;
  }
}

